--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,181 @@
-.App {
+.home {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("image.jpg");
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.home-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3em;
+  color: #ffffffee;
+  text-shadow: 2px 2px black;
+  font-size: 5em;
+}
+
+.main-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10em;
+}
+
+span {
+  width: 200px;
+  height: 60px;
+  border:0.1em solid #FFFFFF;
+  margin:0 0.3em 0.3em 0;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  color:#ffffffee;
   text-align: center;
+  transition: all 0.2s;
+  width: 300px;
+  font-size: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+span:hover{
+  color:#000000;
+  background-color:#ffffffee;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+@media all and (max-width:30em){
+  span{
+  display: flex;
+  margin: 0.4em auto;
+}};
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.register-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 60vh;
+  width: 100%;
+  padding: 2em 0; /* Dodano - dodaje odstępy od góry i dołu kontenera */
 }
 
-.App-link {
-  color: #61dafb;
+.register-home {
+  color: #ffffffee;
+  text-shadow: 2px 2px black;
+  font-size: 5em;
+  font-weight: 700;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 1em; /* Dodano - odstęp od formularza */
+  margin-top: 1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.register-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+  flex-direction: column;
+  width: 100%;
+}
+
+.register-form input {
+  margin: 0.5em 0;
+  padding: 0.5em;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.register-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1em;
+  margin-bottom: 3em; /* Zwiększono odstęp */
+  width: 10%;
+  margin-left: auto; /* Centrowanie poziome */
+  margin-right: auto; /* Centrowanie poziome */
+  padding: 0.5em;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.register-buttons {
+  display: flex;
+  justify-content: center;  /* Przyciski są teraz bliżej siebie */
+  align-items: center;
+  width: 100%;
+  margin-top: 1em;  /* Zwiększony górny margines */
+}
+
+.login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 60vh;
+  width: 100%;
+  padding: 2em 0;
+}
+
+.login-header {
+  color: #ffffffee;
+  text-shadow: 2px 2px black;
+  font-size: 7em;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 1em;
+  margin-top: 2em;
+}
+
+.login-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+  flex-direction: column;
+  width: 100%;
+}
+
+.login-form input {
+  margin: 0.5em 0;
+  padding: 0.5em;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.login-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1em;
+  margin-bottom: 3em; 
+  width: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0.5em;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.login-buttons {
+  display: flex;
+  justify-content: center;  
+  align-items: center;
+  width: 100%;
+  margin-top: 2em;
+}
+
+.logout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5em;
+}
+
+.dashboard-home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5em;
+  font-size: 4em;
 }
